src/test/resources/30/single/opf/invalid/prefixes-redeclare.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid"
		prefix="media: http://should/not/redeclare
		        rendition: http://www.idpf.org/vocab/rendition/#
		        foo: http://idpf.org/epub/vocab/package/#
		        bar: http://idpf.org/epub/vocab/package/link/#">
				
	<!-- redeclaring 2 reserved prefixes: 
	     - 'media' raises an error since it's redeclared to another vocab
	     - 'rendition' is ignored since it only re-declares the reserved vocab
	-->			
				
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-4466674412314</dc:identifier>
        <dc:title>Lorem Ipsum</dc:title>        
        <dc:language>la</dc:language>
        <dc:date>2011-09-01</dc:date>
        <meta property="dcterms:modified">2011-09-01T17:18:00Z</meta>
    </metadata> 
    <manifest>
        <item id="t1" href="lorem.xhtml" properties="nav" media-type="application/xhtml+xml" /> 
		<item id="c2" href="c2.xhtml" media-type="application/xhtml+xml" />		
		<item id="c3" href="c3.xhtml" media-type="application/xhtml+xml" />		
		<item id="c5" href="c5.xhtml" media-type="application/xhtml+xml" />		
        <item id="css" href="lorem.css" media-type="text/css" />
    </manifest>
    <spine>        
		<itemref idref="t1"/>       
		<itemref idref="c2"/>
		<itemref idref="c3"/>
    </spine>    
</package>